tests/snapshots/integration_tests__snapshot_tests__array_append2_array_horn.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_append2_array_horn.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 W) i+0) W)",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 W) N) (Read_Int_Int a+0 N))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 W) K) (Read_Int_Int a+0 K))",
    ],
}
