tests/snapshots/integration_tests__snapshot_tests__array_bubble_sort_rev.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_bubble_sort_rev.vmt",
    status: Good,
    used_instantiations: [],
}
