tests/snapshots/integration_tests__snapshot_tests__array_copy_nondet_add.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_copy_nondet_add.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 (+ (Read_Int_Int a+0 i+0) j+0)) 0) (Read_Int_Int b+0 0))",
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 (+ (Read_Int_Int a+0 i+0) j+0)) i+4) (Read_Int_Int b+0 i+4))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 j+0) 0) (Read_Int_Int a+0 0))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 j+0) i+7) (Read_Int_Int a+0 i+7))",
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 (+ (Read_Int_Int a+0 i+0) j+0)) Z) (Read_Int_Int b+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 j+0) Z) (Read_Int_Int a+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int c+0 i+0 (+ (Read_Int_Int b+0 i+0) j+0)) Z) (Read_Int_Int c+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 (+ (Read_Int_Int a+0 i+0) j+0)) i+0) (+ (Read_Int_Int a+0 i+0) j+0))",
        "(= (Read_Int_Int (Write_Int_Int c+0 i+0 (+ (Read_Int_Int b+0 i+0) j+0)) i+0) (+ (Read_Int_Int b+0 i+0) j+0))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 j+0) i+0) j+0)",
    ],
}
